# draft-intelligence

./: .gitignore  Agent-Ready Implementation Plan for an MLB Draft Model.md  Building an MLB Draft Model with College Trackman Data.md  MLB Draft Model — Tech Stack & Build Plan.md  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
MLB_Draft_Model/: .gitignore  AGENTS.md  COMPREHENSIVE_PLAN.md  EVALUATION.md  HANDOFF.md  MODEL_EVALUATION_HANDOFF.md  README.md  STATUS.md
MLB_Draft_Model/analysis/: 2026_draft_accuracy.md  draft_intelligence_backtest.md  milb_data_feasibility.md  milb_integration_scope.md  milb_outcome_findings.md  rolling_backtest_results.json
MLB_Draft_Model/configs/: default_team_mapping.csv  player_metadata_template.csv  team_mapping_all_teams.csv  team_mapping_bootstrap.csv  team_mapping_template.csv
MLB_Draft_Model/docs/: methodology.md
MLB_Draft_Model/scripts/: README.md  analyze_fields.py  (+25 more)
R/: build_baselines.R  component_scores.R  export_dashboard_data.R
app/: layout.tsx  streamlit_app.py
configs/: default_team_mapping.csv  team_mapping_all_teams.csv
lib/: filters.ts  format.ts  hash.ts  hooks.ts  stats.ts  store.ts  types.ts
scripts/: backtest_draft_model.py  bootstrap_team_mapping.py  build_team_mapping.py  compute_league_baselines.py  create_representative_sample.py  export_draft_source.py  export_draft_source_agg.py  generate_demo_exports.py  validate_dashboard_exports.py
tests/: test_bootstrap_team_mapping.py  test_export_validation.py  test_real_data_loads.py  test_state_store.py
(+326 files in other folders)
