[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-draft-dashboard"
version = "0.1.0"
description = "Analyst-first MLB draft dashboard built on Streamlit, DuckDB, and Parquet exports."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "duckdb>=1.1.0",
  "pandas>=2.0.0",
  "plotly>=5.20.0",
  "pyarrow>=14.0.0",
  "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
